# context-pr

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  sonarcloud.yml
dataset/: curated_issues_data.xlsx  issues_between_releases_by_creation_date.xlsx  release_pairs_with_ccs_categories.xlsx
docs/: architecture.md
ml/: __init__.py  dataset.py  evaluate.py  features.py  model.py  train.py  utils.py
scripts/: action-entrypoint.sh
src/contextpr/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
src/contextpr/data/: __init__.py  dataset.py
src/contextpr/enrichment/: __init__.py  history.py  history_constants.py  intent.py  llm.py  messages.py  nlp.py  nlp_constants.py
src/contextpr/integrations/: __init__.py  git_history.py  github.py  github_auth.py  sonarqube.py
src/contextpr/models/: __init__.py
src/contextpr/persistence/: __init__.py  store.py
src/contextpr/services/: __init__.py  analysis.py  review_comments.py
src/contextpr/utils/: __init__.py  text.py
tests/: __init__.py  test_analysis_service.py  test_cli.py  test_config.py  test_data_dataset.py  test_enrichment.py  test_git_history.py  test_github.py  test_github_auth.py  test_intent.py  test_messages.py  test_persistence.py  test_sonarqube.py  test_utils_text.py
