[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "contextpr"
version = "0.1.0"
description = "Prototype infrastructure for contextual SonarQube pull request feedback."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "ContextPR Contributors" },
]
dependencies = [
  "PyJWT[crypto]>=2.10.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[project.scripts]
contextpr = "contextpr.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/contextpr"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
